<resources>
    <string name="app_name">seedspreaderjava</string>
    <string name="new_app_name">Seed Spreader Java</string>
    <string name="motd">Welcome to application</string>
    <string name="button_add_tray">New tray</string>
    <string name="button_settings">Settings</string>
    <string name="settings_date">Pick a year to view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aet_cols">Number of Columns</string>
    <string name="aet_rows">Number of Rows</string>
    <string name="aet_add_seeds">Add seeds</string>
    <string name="aet_add_register">Register Event (Seedlings, Death, Transplant..)</string>
    <string name="aet_register_dialog">Register Event</string>
    <string name="aet_contents">Contents</string>
    <string name="aet_seed_contents">Seed Contents</string>
</resources>
